--- a/webapp/src/pages/modal-address-autocomplete/addressAutocomplete.html
+++ b/webapp/src/pages/modal-address-autocomplete/addressAutocomplete.html
@@ -10,8 +10,8 @@
             {{ item.description }}
         </ion-item>
     </ion-list>
-    <button ion-button type="button" (click)="useSelectedAddress()" lock>Use address</button>
-    <button ion-button type="button" (click)="dismiss()" lock>Cancel</button>
+    <button ion-button type="button" (click)="useSelectedAddress()">Use address</button>
+    <button ion-button type="button" (click)="dismiss()">Cancel</button>
     <div id="map" data-tap-disabled="true" style="height: 100% "></div>
 </ion-content>
 
