some small design changes

--- a/webapp/src/pages/locations/locations.html
+++ b/webapp/src/pages/locations/locations.html
@@ -50,7 +50,7 @@
               <!--<button ion-button color="danger" (click)="deleteLocation(location); $event.stopPropagation();" lock>
                   Delete
               </button>-->
-              <button ion-button color="danger" (click)="presentActionSheet();">
+              <button ion-button color="danger" (click)="presentActionSheet(location);">
                   Delete
               </button>
           </ion-item-options>
