--- a/webapp/src/pages/locations/locations.html
+++ b/webapp/src/pages/locations/locations.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-navbar>
-        <ion-title>245 locations</ion-title>
+        <ion-title>{{ numberOfLocations }} locations</ion-title>
     </ion-navbar>
     <ion-toolbar [ngClass]="scrollDirection">
         <ion-row>
