--- a/webapp/src/pages/location/location.html
+++ b/webapp/src/pages/location/location.html
@@ -64,7 +64,7 @@
         <ion-list-header>
         VISITS
         </ion-list-header>
-        <ion-item *ngFor="let visit of location.visits" ngClass="{{ visit.status }}">
+        <ion-item *ngFor="let visit of location.visits" ngClass="{{ visit.status }}" (click)="openEditVisitModal(visit)">
             <ion-row>
                 <ion-col col-4>
                     <p>{{ locationsProvider.phpDateObjTojsDateObj(visit.visitDate) | date:"yyyy-MM-dd"}}</p>
@@ -89,7 +89,6 @@
             </button>
         </ion-item>
         <ion-row>
-
         </ion-row>
     </ion-list>
 
